--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-header></app-header>
-<app-all-processes></app-all-processes>
+<router-outlet></router-outlet>
+<app-accsepted-processes></app-accsepted-processes>
