--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,19 @@
-<div class="header container-fluid">
-    <a href="#default" class="logo">Woo</a>
-    <div>
-        <a href="#home">Home</a>
-        <a class="active" href="#contact">Processes</a>
-        <a href="#about">Profile</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <a href="#" class="navbar-brand">Woo</a>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+                <a routerLink="/" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a routerLink="/processes" class="nav-link">Processes</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a href="#" class="nav-link">Profile</a>
+            </li>
+        </ul>
+        <span class="navbar-text">
+            III
+        </span>
     </div>
-    <div class="header-right">III</div>
-</div>
+</nav>
