--- a/src/app/process/process.component.html
+++ b/src/app/process/process.component.html
@@ -1,17 +1,17 @@
-<div class="red">
+<div class="container bg-white">
     <div class="row">
-        <div class="col-sm-3" style="background-color:rgb(183, 183, 241);">
+        <div class="col-3">
             <h2>{{process.title}}</h2>
             <p>burito burito taco man</p>
             <div class="text-muted">{{process.creationTime}}</div>
-                <p *ngFor="let skill of process.techStack" class="badge badge-pill badge-secondary">
-                    {{skill}}
-                </p>
+            <p *ngFor="let skill of process.techStack" class="badge badge-pill badge-secondary">
+                {{skill}}
+            </p>
         </div>
 
-        <div class="col-sm-2 container" style="background-color:rgb(127, 127, 211);">
+        <div class="col-2 container">
 
-            <div class="col-sm-1">
+            <div class="col-1">
                 <p *ngIf="process.locationExpectationFulfillment; else eLoc">
                     T
                 </p>
@@ -19,13 +19,13 @@
                     <p> F</p>
                 </ng-template>
             </div>
-            <div class="col-sm-11">
+            <div class="col-11">
                 <p>Prefered Location</p><br />
                 <p>{{process.location}}</p>
             </div>
 
         </div>
-        <div class="col-sm-2 container" style="background-color:rgb(160, 160, 185);">
+        <div class="col-2 container">
             <p *ngIf="process.salaryExpectationFulfillment; else eSal">
                 T
             </p>
@@ -35,23 +35,23 @@
             <p>Mounthly salary</p><br />
             <p>{{process.salary}} mounthly</p>
         </div>
-        <div class="col-sm-2 container" style="background-color:rgb(231, 219, 150);">
-                <p *ngIf="(process.technologiesExpectationFulfillmentOf-2*process.technologiesExpectationFulfillmentAmount)>=0; else eSal">
-                        T
-                    </p>
-                    <ng-template #eSal>
-                        <p> F</p>
-                    </ng-template>
+        <div class="col-2 container">
+            <p *ngIf="(process.technologiesExpectationFulfillmentOf-2*process.technologiesExpectationFulfillmentAmount)>=0; else eSal">
+                T
+            </p>
+            <ng-template #eSal>
+                <p> F</p>
+            </ng-template>
             <p>Technology</p>
             <p>{{process.technologiesExpectationFulfillmentAmount}} of {{process.technologiesExpectationFulfillmentOf}}</p>
         </div>
-        <div class="col-sm-3" style="background-color:lavender;">
-            <div class="process.status"><span class="label label-default">{{process.status}}</span></div>
-            <div *ngIf="process.status=='New'">
-                <button class="btn btn-block" (click)="process.accseptStatus()">Accsept</button><br />
-                <button class="btn btn-block" (click)="process.rejectStatus()">Reject</button>
+        <div class="col-3">
+            <div class="d-flex justify-content-end"><span class="badge badge-secondary">{{process.status}}</span></div>
+            <div class="d-flex flex-column align-content-end" *ngIf="process.status=='New'">
+                <button class="btn btn-block" (click)="accseptStatus()">Accsept</button><br />
+                <button class="btn btn-block" (click)="rejectStatus()">Reject</button>
             </div>
         </div>
     </div>
 </div>
-<br/>
+<br />
