--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,8 +12,8 @@
                 <a href="#" class="nav-link">Profile</a>
             </li>
         </ul>
-        <span class="navbar-text">
-            III
+        <span class="navbar-text ">
+           <span class="glyphicon glyphicon glyphicon-cog"></span>
         </span>
     </div>
 </nav>
