--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-white">
+<nav class="navbar navbar-expand-sm navbar-light bg-white">
     <a href="#" class="navbar-brand">Woo</a>
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
@@ -13,7 +13,7 @@
             </li>
         </ul>
         <span class="navbar-text ">
-           <span class="glyphicon glyphicon glyphicon-cog"></span>
+            <img src="./assets/baseline-settings-20px.svg" alt="III">
         </span>
     </div>
 </nav>
